@@ -3,12 +3,12 @@ package de.tum.cit.aet.artemis.hyperion.service.codegeneration;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyMap;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.util.List;
-import java.util.Map;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -25,7 +25,6 @@ import org.springframework.ai.retry.NonTransientAiException;
 import de.tum.cit.aet.artemis.core.domain.User;
 import de.tum.cit.aet.artemis.core.exception.NetworkingException;
 import de.tum.cit.aet.artemis.hyperion.dto.CodeGenerationResponseDTO;
-import de.tum.cit.aet.artemis.hyperion.dto.GeneratedFileDTO;
 import de.tum.cit.aet.artemis.hyperion.service.HyperionPromptTemplateService;
 import de.tum.cit.aet.artemis.programming.domain.ProgrammingExercise;
 import de.tum.cit.aet.artemis.programming.domain.ProgrammingLanguage;
@@ -43,8 +42,6 @@ class HyperionSolutionRepositoryServiceTest {
     @Mock
     private HyperionPromptTemplateService templates;
 
-    private ChatClient chatClient;
-
     private HyperionSolutionRepositoryService solutionRepository;
 
     private User user;
@@ -54,7 +51,7 @@ class HyperionSolutionRepositoryServiceTest {
     @BeforeEach
     void setup() {
         MockitoAnnotations.openMocks(this);
-        this.chatClient = ChatClient.create(chatModel);
+        ChatClient chatClient = ChatClient.create(chatModel);
         this.solutionRepository = new HyperionSolutionRepositoryService(programmingExerciseRepository, chatClient, templates);
 
         this.user = new User();
@@ -72,31 +69,30 @@ class HyperionSolutionRepositoryServiceTest {
         String renderedPrompt = "Rendered prompt for solution plan";
         String jsonResponse = "{\"solutionPlan\":\"" + expectedPlan + "\",\"files\":[]}";
 
-        when(templates.renderObject(eq("/prompts/hyperion/solution/1_plan.st"), any(Map.class))).thenReturn(renderedPrompt);
+        when(templates.renderObject(eq("/prompts/hyperion/solution/1_plan.st"), anyMap())).thenReturn(renderedPrompt);
         when(chatModel.call(any(Prompt.class))).thenReturn(createChatResponse(jsonResponse));
 
         CodeGenerationResponseDTO result = solutionRepository.generateSolutionPlan(user, exercise, "build logs", "repo structure");
 
         assertThat(result).isNotNull();
         assertThat(result.getSolutionPlan()).isEqualTo(expectedPlan);
-        verify(templates).renderObject(eq("/prompts/hyperion/solution/1_plan.st"), any(Map.class));
+        verify(templates).renderObject(eq("/prompts/hyperion/solution/1_plan.st"), anyMap());
         verify(chatModel).call(any(Prompt.class));
     }
 
     @Test
     void defineFileStructure_withValidInput_returnsFileStructure() throws Exception {
-        List<GeneratedFileDTO> expectedFiles = List.of(new GeneratedFileDTO("Sort.java", "class Sort {}"));
         String jsonResponse = "{\"solutionPlan\":\"plan\",\"files\":[{\"path\":\"Sort.java\",\"content\":\"class Sort {}\"}]}";
 
-        when(templates.renderObject(eq("/prompts/hyperion/solution/2_file_structure.st"), any(Map.class))).thenReturn("rendered");
+        when(templates.renderObject(eq("/prompts/hyperion/solution/2_file_structure.st"), anyMap())).thenReturn("rendered");
         when(chatModel.call(any(Prompt.class))).thenReturn(createChatResponse(jsonResponse));
 
         CodeGenerationResponseDTO result = solutionRepository.defineFileStructure(user, exercise, "solution plan", "repo structure");
 
         assertThat(result).isNotNull();
         assertThat(result.getFiles()).hasSize(1);
-        assertThat(result.getFiles().get(0).path()).isEqualTo("Sort.java");
-        assertThat(result.getFiles().get(0).content()).isEqualTo("class Sort {}");
+        assertThat(result.getFiles().getFirst().path()).isEqualTo("Sort.java");
+        assertThat(result.getFiles().getFirst().content()).isEqualTo("class Sort {}");
     }
 
     @Test
@@ -104,14 +100,14 @@ class HyperionSolutionRepositoryServiceTest {
         String fileStructureJson = "{\"solutionPlan\":\"plan\",\"files\":[{\"path\":\"Sort.java\",\"content\":\"stub\"}]}";
         String headersJson = "{\"solutionPlan\":\"plan\",\"files\":[{\"path\":\"Sort.java\",\"content\":\"class Sort { void sort(); }\"}]}";
 
-        when(templates.renderObject(eq("/prompts/hyperion/solution/2_file_structure.st"), any(Map.class))).thenReturn("rendered");
-        when(templates.renderObject(eq("/prompts/hyperion/solution/3_headers.st"), any(Map.class))).thenReturn("rendered");
+        when(templates.renderObject(eq("/prompts/hyperion/solution/2_file_structure.st"), anyMap())).thenReturn("rendered");
+        when(templates.renderObject(eq("/prompts/hyperion/solution/3_headers.st"), anyMap())).thenReturn("rendered");
         when(chatModel.call(any(Prompt.class))).thenReturn(createChatResponse(fileStructureJson)).thenReturn(createChatResponse(headersJson));
 
         CodeGenerationResponseDTO result = solutionRepository.generateClassAndMethodHeaders(user, exercise, "solution plan", "repo structure");
 
         assertThat(result).isNotNull();
-        assertThat(result.getFiles().get(0).content()).contains("void sort()");
+        assertThat(result.getFiles().getFirst().content()).contains("void sort()");
         verify(chatModel, org.mockito.Mockito.times(2)).call(any(Prompt.class));
     }
 
@@ -121,14 +117,14 @@ class HyperionSolutionRepositoryServiceTest {
         String headersJson = "{\"solutionPlan\":\"plan\",\"files\":[{\"path\":\"Sort.java\",\"content\":\"class Sort { void sort(); }\"}]}";
         String coreLogicJson = "{\"solutionPlan\":\"plan\",\"files\":[{\"path\":\"Sort.java\",\"content\":\"class Sort { void sort() { /* implementation */ } }\"}]}";
 
-        when(templates.renderObject(any(String.class), any(Map.class))).thenReturn("rendered");
+        when(templates.renderObject(any(String.class), anyMap())).thenReturn("rendered");
         when(chatModel.call(any(Prompt.class))).thenReturn(createChatResponse(fileStructureJson)).thenReturn(createChatResponse(headersJson))
                 .thenReturn(createChatResponse(coreLogicJson));
 
         CodeGenerationResponseDTO result = solutionRepository.generateCoreLogic(user, exercise, "solution plan", "repo structure");
 
         assertThat(result).isNotNull();
-        assertThat(result.getFiles().get(0).content()).contains("implementation");
+        assertThat(result.getFiles().getFirst().content()).contains("implementation");
         verify(chatModel, org.mockito.Mockito.times(3)).call(any(Prompt.class));
     }
 
@@ -141,7 +137,7 @@ class HyperionSolutionRepositoryServiceTest {
 
     @Test
     void generateSolutionPlan_withNonTransientAiException_throwsNetworkingException() {
-        when(templates.renderObject(any(String.class), any(Map.class))).thenReturn("rendered");
+        when(templates.renderObject(any(String.class), anyMap())).thenReturn("rendered");
         when(chatModel.call(any(Prompt.class))).thenThrow(new NonTransientAiException("AI service error"));
 
         assertThatThrownBy(() -> solutionRepository.generateSolutionPlan(user, exercise, "logs", "structure")).isInstanceOf(NetworkingException.class)
